Fix: changing overflow by scroll-behavios.

--- a/0x02-CSS_advanced/styles/1-style.css
+++ b/0x02-CSS_advanced/styles/1-style.css
@@ -1,3 +1,3 @@
 html {
-    overflow: scroll;
+    scroll-behavior: smooth;
 }
